source/objects/Order_Fulfillment_BO__b.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>SF Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipName>ProcessingOrder</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SourceSystem__c</fullName>
        <label>SourceSystem</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransactionID__c</fullName>
        <label>TransactionID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransactionTimestamp__c</fullName>
        <label>TransactionTimestamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TransactionType__c</fullName>
        <label>TransactionType</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <indexes>
        <fullName>OrderFulfillmentPK</fullName>
        <fields>
            <name>Order__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>TransactionType__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>TransactionTimestamp__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
        <label>OrderFulfillmentPK</label>
    </indexes>
    <label>Order Fulfillment BO</label>
    <pluralLabel>Order Fulfillment BOs</pluralLabel>
</CustomObject>